--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,124 +1,58 @@
 ﻿body {
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: scroll;
 }
 
-#wrapper {
-    margin-left:0;
-    margin-right:0;
-    padding: 0;
+.carousel, .carousel-inner {
+    padding: 0px;
+    margin: 0px;
+    margin-left: -8px;
+    margin-right: -24px;
 }
 
-#sidebar-container {
-    min-height: 100vh;   
-    background-color: #333;
-    padding: 0;
-    z-index: 99 !important;
-    position:fixed;
+.carouselImg{
+    height:500px;
 }
 
-/* Sidebar sizes when expanded and expanded */
-.sidebar-expanded {
-    width: 230px;
-}
-.sidebar-collapsed {
-    width: 60px;
-}
-
-.main-expanded{
-    padding-left: 60px;
-}
-
-.main-expanded #top .center-align{
-    text-align: center;
-    padding-right:60px;
-}
-
-.main-collapsed{
-    padding-left: 230px;
-}
-
-.main-collapsed #top .center-align{
-    text-align: center;
-    padding-right:230px;
-}
-
-.main-collapsed #middle .center-align{
-    padding-right:250px;
-}
-
-.main-expanded #middle .center-align{
-    padding-right: 80px;
-}
-
-.main-expanded .experience .left{
-    padding-left:80px;
-}
-
-.main-collapsed .experience .left{
-    padding-left:80px;
-}
-
-/* Menu item*/
-#sidebar-container .list-group a {
-    height: 50px;
+.carousel-caption {
     color: white;
+    text-shadow: 0 1px 2px rgba(0,0,0,.6);
 }
 
-/* Submenu item*/
-#sidebar-container .list-group .sidebar-submenu a {
-    height: 45px;
-    padding-left: 30px;
-}
-.sidebar-submenu {
-    font-size: 0.9rem;
+.middle-body {
+    
 }
 
-/* Separators */
-.sidebar-separator-title {
-    background-color: #333;
-    height: 35px;
-}
-.sidebar-separator {
-    background-color: #333;
-    height: 25px;
-}
-.logo-separator {
-    background-color: #333;    
-    height: 60px;
+.media-container {
+    height: 300px;
+    padding-left: 20px;
+    background-image: url('images/SigEpCrest.png');
+    background-repeat: no-repeat;
+    background-size: auto;
+    z-index: -1;
+    background-position: center;
 }
 
-/* Closed submenu icon */
-#sidebar-container .list-group .list-group-item[aria-expanded="false"] .submenu-icon::after {
-  content: " \f0d7";
-  font-family: FontAwesome;
-  display: inline;
-  text-align: right;
-  padding-left: 10px;
-}
-/* Opened submenu icon */
-#sidebar-container .list-group .list-group-item[aria-expanded="true"] .submenu-icon::after {
-  content: " \f0da";
-  font-family: FontAwesome;
-  display: inline;
-  text-align: right;
-  padding-left: 10px;
-}
-
-/* #main {
-    padding-left:0px;
-    padding-right:0px;
-} */
-
-#innerScroll{
-    display:none;
-}
-
-.media {
+#recruitment {
+    background-color: #e5e5e5;
     text-align: center;
+    height: 150px;
+    padding: 0px;
+    margin: 0px;
+    margin-left: -15px;
+    margin-right: -15px;
 }
 
-.media img {
+#recruitment-text{
+    padding-top:30px;
+}
+
+.mediaDiv {
+    text-align: center;
+    padding:0px;
+    margin:0px;
+}
+
+.mediaImg {
     width: 50px;
     height: 50px;
     margin: 10px;
@@ -126,22 +60,18 @@
     border-radius: 25px;
 }
 
-    .media img:hover {
+    .mediaImg:hover {
         -webkit-transform: scale(1.2);
         transform: scale(1.2);
     }
-
-#scrollContainer{
-    position: absolute;
-    bottom: 0;
-}
 
 #scroller {
     opacity:1;
     position: relative;
     height: 180px;
-    width: 100vw;
+    width: 1800px;
     overflow: hidden;
+    margin: 0 auto;
 }
 
     #scroller .innerScrollArea {
@@ -180,212 +110,17 @@
         transform: scale(1.2);
     }
 
-#top{
-    background: linear-gradient(to bottom, #638BC8 0%, #4B153C 100%);
-    min-height:100vh;
-    min-width:100vw;
+.container{
+     
 }
 
-/* #middle{
-
-} */
-
-#languages{
-    background: linear-gradient(to bottom, #4B153C 0%, #F9E9D4 100%);
+h2{
+    display:inline;
 }
 
-.lang-container{
-    background: linear-gradient(to right, #fcfcfc 0%, #cecece 100%);
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-    margin: 20px;
 
-}
-
-.lang-title{
-    line-height: 100px;
-    text-align: center;
-    height: 100px;
-    font-weight: 700;
-    color: white;
-    font-size: 30px;
-}
-
-#css-title{
-    background: linear-gradient(to right, #0270BB 0%, #28A9E2 100%);
-}
-
-#html-title{
-    background: linear-gradient(to right, #E44D26 0%, #F16529 100%);
-}
-
-#js-title{
-    background: linear-gradient(to right, #FFBB1C 0%, #FB9C1C 100%);
-}
-
-#java-title{
-    background: linear-gradient(to right, #EA2D2E 0%, #0074BD 100%);
-}
-
-#cSharp-title{
-    background: linear-gradient(to right, #9B4F96 0%, #68217A 100%);
-}
-
-#dotNet-title{
-    background: linear-gradient(to right, #57AFD2 0%, #0E6098 100%);
-}
-
-#sql-title{
-    background: linear-gradient(to right, #2677C7 0%, #0072C6 100%);
-}
-
-#jquery-title{
-    background: linear-gradient(to right, #0769AD 0%, #054979 100%);
-}
-
-#node-title{
-    background: linear-gradient(to right, #6FC04A 0%, #3E863D 100%);
-}
-
-#bootstrap-title{
-    background: linear-gradient(to right, #8B57D9 0%, #32145F 100%);
-}
-
-.lang-body{
-    width: 200px;
-    height: 125px;
-    width: 50%; 
-    margin:0px auto;
-    padding-top:5px;
-}
-
-.inner-text{
-    font-weight: 700;
-    margin-top: -50px;
-} 
-
-#experience-education{
-    background: linear-gradient(to bottom,#F9E9D4 0%, #779131 100%);
-    height:100vh;
-}
-
-#experience-work{
-    background: linear-gradient(to bottom,#779131 0%, #FCC458 100%);
-    height:100vh;
-}
-
-#intro{
-    padding-top:30vh;
-}
-
-.header{
-    font-weight: 500;
-    font-size: 48px;
-    color: #333333;
-}
-
-.headerSub{
-    font-weight: 400;
-    font-size: 36px;
-    color: #333333;
-}
-
-.header2 {
-    font-weight: 400;
-    font-size: 48px;
-    color: #333333;
-    padding-left: 50px;
-    padding-bottom: 0px;
-    margin-bottom: 0px;
-}
-.animation-element.slide-left {
-    opacity: 0;
-    -moz-transition: all 500ms linear;
-    -webkit-transition: all 500ms linear;
-    -o-transition: all 500ms linear;
-    transition: all 500ms linear;
-    -moz-transform: translate3d(-100px, 0px, 0px);
-    -webkit-transform: translate3d(-100px, 0px, 0px);
-    -o-transform: translate(-100px, 0px);
-    -ms-transform: translate(-100px, 0px);
-    transform: translate3d(-100px, 0px, 0px);
-  }
-  
-  .animation-element.slide-left.in-view {
-    opacity: 1;
-    -moz-transform: translate3d(0px, 0px, 0px);
-    -webkit-transform: translate3d(0px, 0px, 0px);
-    -o-transform: translate(0px, 0px);
-    -ms-transform: translate(0px, 0px);
-    transform: translate3d(0px, 0px, 0px);
-  }
-  
-  
-  .animation-element.slide-left.testimonial .header{
-    float: left;
-    width: 100%;
-    margin-bottom: 10px;
-  }
-
-/* #experience img{
-    padding: 0;
-    margin: 0;
-    height:150px;
-    width:35vw;
-} */
-
-.block{
-    background: white;
-    margin: 5px 0px;
-    padding: 5px 10px 5px 10px;
-    height:250px;
-    width: 35vw;
-}
-
-.block-img{
-    height:50%;
-    width:100%;
-    padding: 5px 10px;
-    mix-blend-mode: multiply;
-}
-
-.block-body{
-    padding-left:20px;
-}
-
-.gallery-body{
-    padding-left:20px;
-}
-
-.gallery-container{
-    margin: 10px 0px;
-    height: 250px;
-    width: 35vw;
-}
-
-.tz-gallery .thumbnail {
-    padding: 0;
-    background-color: #fff;
-    border-radius: 4px;
-    border: none;
-    transition: 0.15s ease-in-out;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-}
-
-.tz-gallery .thumbnail:hover {
-    transform: translateY(-10px) scale(1.02);
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-}
-
-.tz-gallery .lightbox img {
-    border-radius: 4px 4px 0 0;
-    height:50%;
-    width:100%;
-    padding: 5px 10px;
-    mix-blend-mode: multiply;
-}
-
-/* @media screen and (max-width: 480px) {
+@media screen and (max-width: 480px) {
     .carouselImg {
         height: 250px;
     }
-} */
+}
